...
                    // Copy to clipboard
                    IconButton(onClick = {
                        clipboardManager.setText(AnnotatedString(shortURL))
                        // Provide feedback to the user (e.g., a Toast or SnackBar)
                        Toast.makeText(context, "URL copied to clipboard", Toast.LENGTH_SHORT).show()
                    }) {
                        Icon(Icons.Filled.ContentCopy, contentDescription = "Copy")
                    }
                    // Share
                    IconButton(onClick = {
                        val sendIntent: Intent = Intent().apply {
                            action = Intent.ACTION_SEND
                            putExtra(Intent.EXTRA_TEXT, shortURL)
...
                                inclusive = true
                            }
                        }
                    },
                    modifier = Modifier.padding(top = 16.dp)
                ) {
                    Icon(Icons.Filled.Home, contentDescription = "Go Back Button")
                    Text(text = "Go Back")
                }
            }
        }
    }
}
